# kata

./: CMakeLists.txt  README.md
fizzbuzz/: CMakeLists.txt
fizzbuzz/1/: CMakeLists.txt  FizzBuzz.cpp
functional_exercises/: AlgorithmsByAccumulate.cpp  CMakeLists.txt
parallelAlgorithms/: CMakeLists.txt  ParallelAlgorithms.cpp
